ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /get
        pathType: Prefix
        backend:
          service:
            name: getmetricsservice
            port:
              number: 8000
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: postmetricsservice
            port:
              number: 8001
